--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -63,3 +63,7 @@
   title     = {Databricks: Spark SQL ddata analysis of Liancheng},
   url       = {http://prog3.com/article/2015-06-18/2824958}
 }
+@online{hospital_ramon_y_cajal_bioestadistica,
+  title     = {Material docente de la Unidad de Bioestadística Clínica},
+  url       = {http://www.hrc.es/bioest}
+}
