--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -947,7 +947,7 @@
 
     One interesting advantage of the Kaplan-Meier Estimates model is the visualization of the survival function in a graph, as this method is intended for exploratory analysis and for a light approach to the problem itself, the possibility of plotting the results in a simple to understand graph is an interesting feature.
 
-    
+
 
     Some advantages of this method are that it takes account for the right censored data, giving more precise and realistic survival times, it is also quite simple and easy to calculate, and gives useful graphs for interpreting the general behavior of the population
 
@@ -1000,13 +1000,58 @@
             alpha & parameter to compute confidence intervals for the survivor function and its median \\ \hline
             etype & parameter to specify the error type, \emph{greenwood} or \emph{peto} \\ \hline
             ctype & parameter to modify the confidence interval, \emph{plain} remains the lower and upper bound of the confidence interval unmodified, \emph{log} corresponds to the logistic transformation, and \emph{log-log} corresponds to the complementary log-log transformation \\ \hline
-            ttype & If data from different groups is available, parameter to specify the test to perform for comparing survival data across multiple groups, the options are: \emph{none}, \emph{log-rank} and \emph{wilcoxon} \\ \hline
-            fmt & parameter to specify the output format to use for the results: \emph{text} or \emph{csv} \\ \hhline{|=|=|}
-            O & output matrix containing the results of the Kaplan-Meier analysis \\ \hline
-            M & output matrix containing the following statistic: total number of events, median and its confidence intervals. If survival data comes from multiple groups and strata, each row of M contains the above statistics per group and stratum \\ \hline
-            T & If survival data from multiple groups is available, and \emph{ttype} is \emph{log-rank} or \emph{wilcoxon}, output matrix containing the result of the stratified test for comparing multiple groups \\ \hline
+            ttype & if data from different groups is available, parameter to specify the test to perform for comparing survival data across multiple groups, the options are: \emph{none}, \emph{log-rank} and \emph{wilcoxon} \\ \hline
+            fmt & parameter to specify the output format to use for the results: \emph{text} or \emph{csv} \\ \hline
         \end{tabular}
-        \caption{Input and output files and content for Kaplan-Meier Estimates algorithm}
+        \caption{Input files and parameters for Kaplan-Meier Estimates algorithm}
+        \label{tab:KM_IO_files}
+      \end{table}
+
+      \begin{table}[!ht]
+        \centering
+        \begin{tabular}{|>{\centering\arraybackslash}m{0.2\textwidth}|m{0.8\textwidth}|}
+          \hline
+            \thead{File} \thead{or parameter} & \thead{Content or value} \\
+            \bottomrule
+            O & output matrix containing the results of the Kaplan-Meier analysis, with $7$ columns that represent the status on each time interval:
+            \begin{itemize}
+              \item timestamp
+              \item number of subjects at risk
+              \item number of events
+              \item KM estimate of the survival function
+              \item Standard error of survival function
+              \item Lower confidence interval for survival function
+              \item Upper confidence interval for survival function
+            \end{itemize} \\ \hline
+            M & output matrix whose dimension depends on the number of groups (g) and strata (s) in the data (k denotes the number of factors used for grouping, i.e., ncol(GI) and l denotes the number of factors used for stratifying, i.e., ncol(SI)):
+            \begin{itemize}
+              \item unique combination of values in the k factors used for grouping
+              \item unique combination of values in the l factors used for stratifying
+              \item total number of records
+              \item total number of events
+              \item median
+              \item lower $100*(1-alpha)\%$ confidence interval of the median of survival function
+              \item upper $100*(1-alpha)\%$ confidence interval of the median of survival function
+            \end{itemize} \\ \hline
+            T & if survival data from multiple groups is available, and \emph{ttype} is \emph{log-rank} or \emph{wilcoxon}, output matrix containing the result of the stratified test for comparing multiple groups:
+            \begin{itemize}
+              \item number of groups
+              \item degree of freedom for Chi-squared distributed test statistic
+              \item test statistic
+              \item p-value
+            \end{itemize}
+             \\ \hline
+            T\_GROUPS\_OE & if exists T, statistics for groups formed on analysis, with as many rows as groups, and the following column values:
+            \begin{itemize}
+              \item number of events
+              \item observed value
+              \item expected value
+              \item $(O-E)^2/E$
+              \item $(O-E)^2/V$
+            \end{itemize}
+            \\ \hline
+        \end{tabular}
+        \caption{Output files and parameters for Kaplan-Meier Estimates algorithm}
         \label{tab:KM_IO_files}
       \end{table}
 
@@ -1054,9 +1099,10 @@
 
       \begin{table}[!ht]
         \centering
-        \begin{tabular}{|c|p{\textwidth}|}
+        \begin{tabular}{|>{\centering\arraybackslash}m{0.2\textwidth}|m{0.8\textwidth}|}
           \hline
-            File & content \\ \hline
+            \thead{File} \thead{or parameter} & \thead{Content or value} \\
+            \bottomrule
             X & input matrix with the survival data itself, containing the following variables separated in columns: timestamps, whether the event occurred (1) or the data is censored (0), columns of features for the model \\ \hline
             TE & input matrix indicating the indexes of the columns where the timestamps and the event information are located on matrix X \\ \hline
             F & input column matrix  indicating the indices of X which are to be used for fitting the Cox model \\ \hline
